# nutonic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tmp_report_keys.txt  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  ecosystem.config.cjs  hf-dataset.gitignore  package-lock.json  package.json  requirements-patagonia-eval.txt
docs/: CLIENT-SETTINGS-SPEC.md  DESIGN.md  GAME-ENGINE.md  INTEL-SCORING-AND-PROGRESSION-SPEC.md  INTEL-TAB-SPEC.md  LEADERBOARD-MAP-POI-SCORES.md  NARRATIVE-AND-PROMPTS.md  NU_TONIC_ARTIFACT_REFERENCE.md  (+11 more)
inference/lfm_vl_hint_service/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
inference/lfm_vl_hint_service/src/lfm_vl_hint_service/: __init__.py  config.py  dispatch.py  gradio_panel.py  infer_openai.py  infer_transformers.py  liquid_hub_ids.py  main.py  models.py  prompts.py  run_serve.py  spaces_zero.py  stub_infer.py
inference/lfm_vl_hint_service/tests/: conftest.py  test_from_frames.py  test_infer_openai_unit.py  test_narrative_fuse.py  test_pro_brief_fuse.py  test_spaces_zero.py
inference/lfm_vl_satellite_caption_service/: Dockerfile  README.md  app.py  pyproject.toml
inference/lfm_vl_satellite_caption_service/src/lfm_vl_satellite_caption_service/: __init__.py  config.py  dispatch.py  gradio_panel.py  infer_openai.py  infer_transformers.py  liquid_hub_ids.py  main.py  models.py  prompts.py  spaces_zero.py  stub_infer.py
inference/lfm_vl_satellite_caption_service/tests/: conftest.py  test_infer_route.py
inference/pro_gradio_demo/: app.py  pyproject.toml
inference/pro_gradio_demo/src/nutonic_pro_gradio_demo/: client.py  gradio_app.py  hmac_signing.py  image_fetch.py  models.py  render.py  settings.py  vlm_parse.py  vlm_runtime.py
inference/pro_gradio_demo/tests/: conftest.py  test_hmac_signing.py  test_imports.py
inference/pro_materialization_service/: Dockerfile  README.md  pyproject.toml
inference/pro_materialization_service/src/pro_materialization_service/: __init__.py  inference_hmac.py  main.py  models.py
inference/pro_materialization_service/src/pro_materialization_service/data/: __init__.py  s2_asset_allowlist.yaml
inference/pro_materialization_service/src/pro_materialization_service/geospatial/: __init__.py  asset_policy.py  asset_version.py  bbox.py  mapbox_static.py  pipeline.py  s2_stac_load.py  tim_export.py  vlm_contracts.py  vlm_export.py
inference/pro_materialization_service/tests/: test_bbox.py  test_health_and_stub.py  test_mapbox_static_policy.py  test_pro_inbound_hmac.py  test_s2_stac_contract.py
inference/streetview_pano_service/: Dockerfile  README.md  pyproject.toml
inference/streetview_pano_service/src/streetview_pano_service/: __init__.py  errors.py  google_sample.py  google_static.py  inference_hmac.py  main.py  models.py  pano_config.py  sample_dispatch.py  sample_frames.py  sampling_extent.py
inference/streetview_pano_service/tests/: conftest.py  test_google_static_mocked.py  test_inbound_hmac.py  test_panos_sample.py  test_sampling_extent.py
inference/terramind_tim_local/: Dockerfile  README.md  app.py  config.example.s2l2a.yaml  config.example.yaml  config.geoguessr_live_3row_full_output.yaml  config.geoguessr_live_3row_s2_compatible.yaml  config.geoguessr_live_3row_s2_compatible_large.yaml  config.hf_job_geoguessr_poi12_first3.yaml  config.hf_job_geoguessr_poi12_first5.yaml  config.live_hydrate_geoguessr_poi12_first3.yaml  pyproject.toml
inference/terramind_tim_local/src/nutonic_terramind_tim_local/: __init__.py  __main__.py  capture.py  cli.py  geoguessr_materialize.py  gradio_panel.py  inputs_build.py  oceanscout_policy.py  run.py  run_space_serve.py  s2_stac.py  serialize.py  space_api.py  spaces_zero.py  terramind_patches.py  tim_defaults.py
inference/terramind_tim_local/tests/: test_geoguessr_materialize.py  test_io_modalities.py  test_profile_analytics.py  test_s2_stac_contract.py  test_smoke.py  test_space_api_health.py  test_terramind_patches.py
refs/terramind-ad-main/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
refs/terramind-ad-main/notebooks/: detection.ipynb
refs/terramind-ad-main/resources/: .gitignore  events.json
refs/terramind-ad-main/src/terramind_ad/: cloudmask.py  data.py  processing.py  stac.py  visualization.py  zarr.py
refs/terramind-ad-main/src/terramind_ad/dashboard/: __init__.py  components.py  main.py
refs/terramind-ad-main/src/terramind_ad/detect/: __init__.py  base.py
refs/terramind-ad-main/src/terramind_ad/tiling/: __init__.py  core.py
refs/terramind-ad-main/tests/: test_infer_script.py  test_tiling.py
refs/terramind-ad-main/tools/: app.py  convert.py  detect.py  download.py  fix_zarr.py  generate.py  infer.py
refs/terramind-geogen-main/: README.md  pyproject.toml
refs/terramind-geogen-main/notebooks/: 1-validate_transforms.ipynb  2-create_heatmap_terramesh_val.ipynb  3-any_generation_terramesh.ipynb
refs/terramind-geogen-main/scripts/: generate_and_evaluate.py  plot_error_heatmap.py
refs/terramind-geogen-main/src/: geo_utils.py  plotting_utils.py  terramesh.py  terramesh_statistics.yaml
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
server/docs/: TOPOLOGY.md  catalog_seed.sql
server/src/nutonic_server/: __init__.py  bundles.py  catalog.py  catalog_generated.py  deps.py  guess_telemetry_store.py  haversine.py  hf_persistence.py  inference_client.py  jwt_tokens.py  leaderboard_store.py  main.py  pro_jobs_runner.py  pro_jobs_store.py  production_analysis_prompt.py  ranked_store.py  schemas.py  settings.py
server/src/nutonic_server/bundles/: registry.json
server/tests/: catalog_samples.py  conftest.py  live_pro_vlm_manifest.py  test_health.py  test_inference_client.py  test_leaderboard_store.py  test_live_hf_lfm_model_download.py  test_manifest_catalog_load.py  test_on_device_payload_vlm_injection.py  test_pro_job_materialize.py  test_production_analysis_prompt_contract.py  test_production_analysis_prompt_sync.py  test_ranked_flow.py
tools/patagonia_eval/: pyproject.toml
tools/patagonia_eval/src/nutonic_patagonia_eval/: __init__.py
(+815 files in other folders)
