[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-server"
version = "0.1.0"
description = "NU:TONIC thin game server (FastAPI orchestrator; no torch)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "PyJWT>=2.9.0",
    "sqlalchemy>=2.0.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "openapi-spec-validator>=0.7.1",
    "pyyaml>=6.0.2",
]
ops = [
    "gradio>=4.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/nutonic_server/bundles/nutonic.bundle.v1.demo_still.jpg" = "nutonic_server/bundles/nutonic.bundle.v1.demo_still.jpg"
"src/nutonic_server/bundles/nutonic.still.v1.idempo_nyc.jpg" = "nutonic_server/bundles/nutonic.still.v1.idempo_nyc.jpg"
"src/nutonic_server/bundles/registry.json" = "nutonic_server/bundles/registry.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
