[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-lfm-vl-hint-service"
version = "0.2.0"
description = "LFM-VL Street View hints: stub, Hugging Face transformers (official Liquid weights), or OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0,<3",
    "httpx>=0.27.0,<1",
    "pillow>=10.0.0,<12",
]

[project.optional-dependencies]
model = [
    "torch>=2.2.0,<3",
    "transformers>=5.2.0,<6",
    "accelerate>=0.33.0,<1",
]
# Gradio SDK + Hugging Face ``spaces`` (``@spaces.GPU`` / ZeroGPU). Not required for CI stub tests.
serve = [
    "gradio>=4.44.0,<6",
    "spaces>=0.44.0,<1",
]
dev = ["pytest>=8.0.0"]

[project.scripts]
nutonic-lfm-vl-serve = "lfm_vl_hint_service.run_serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lfm_vl_hint_service"]
