[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-pro-gradio-demo"
version = "0.1.0"
description = "NU:TONIC PRO ZeroGPU Gradio demo (server-orchestrated jobs + local Transformers VLM)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0.0,<3",
  "pydantic-settings>=2.0.0,<3",
  "httpx>=0.27.0,<1",
  "pillow>=10.0.0,<12",
  "huggingface_hub>=0.23.0,<2",
  "safetensors>=0.4.0,<1",
]

[project.optional-dependencies]
model = [
  "torch>=2.2.0,<3",
  "torchvision>=0.17.0,<1",
  "transformers>=5.2.0,<6",
  "accelerate>=0.33.0,<1",
]
serve = [
  "gradio>=4.44.0,<6",
  "spaces>=0.44.0,<1",
]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_pro_gradio_demo"]
