[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-pro-materialization-service"
version = "0.3.1"
description = "PRO tab fetch + downscale (IMP-113 P1–P2 Mapbox+VLM+optional Sentinel-2; CPU/IO, no torch)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0,<3",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0,<3",
    "PyYAML>=6.0.0",
    "pystac-client>=0.7.0",
    "rasterio>=1.3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pro_materialization_service"]
