[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-streetview-pano-service"
version = "0.1.0"
description = "CPU Street View pano / static URL builder (IMP-110 stub)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/streetview_pano_service"]
