[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-terramind-tim-local"
version = "0.1.0"
description = "Local TerraTorch TerraMind TiM runner + JSON export for NU:TONIC cache pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "terratorch>=1.1.1,<1.3",
    "PyYAML>=6.0.1",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
s2 = ["pystac-client>=0.7.0", "rasterio>=1.3.9"]

[project.scripts]
nutonic-tim-local = "nutonic_terramind_tim_local.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_terramind_tim_local"]
