[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-terramind-tim-local"
version = "0.1.0"
description = "Local TerraTorch TerraMind TiM runner + JSON export for NU:TONIC cache pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "terratorch>=1.1.1,<1.3",
    "PyYAML>=6.0.1",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    # Align with TerraTorch → peft: older peft imports HybridCache from transformers;
    # transformers 5.2+ reshaped exports — peft 0.18.1+ avoids the stale import path.
    "peft>=0.18.1",
    "transformers>=4.48.0",
    # requests 2.33 + urllib3 2.6.x can hit ``BaseSSLError`` import errors on some stacks
    "urllib3>=2.2.0,<2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
s2 = ["pystac-client>=0.7.0", "rasterio>=1.3.9", "boto3>=1.34.0"]

[project.scripts]
nutonic-tim-local = "nutonic_terramind_tim_local.cli:main"
nutonic-tim-geoguessr-materialize = "nutonic_terramind_tim_local.geoguessr_materialize:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_terramind_tim_local"]
