[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-terramind-tim-local"
version = "0.1.0"
description = "Local TerraTorch TerraMind TiM runner + JSON export for NU:TONIC cache pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "terratorch>=1.1.1,<1.3",
    "PyYAML>=6.0.1",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    # Align with TerraTorch → peft: older peft imports HybridCache from transformers;
    # transformers 5.2+ reshaped exports — peft 0.18.1+ avoids the stale import path.
    "peft>=0.18.1",
    "transformers>=4.48.0",
    # requests 2.33 + urllib3 2.6.x can hit ``BaseSSLError`` import errors on some stacks
    "urllib3>=2.2.0,<2.6",
    "accelerate>=1.13.0",
    "triton>=3.0.0 ; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
s2 = ["pystac-client>=0.7.0", "rasterio>=1.3.9", "boto3>=1.34.0"]
# Hugging Face Docker / ZeroGPU Space (FastAPI + optional ``spaces.GPU`` on ``/v1/tim/export``).
space = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "spaces>=0.44.0,<1",
]

[project.scripts]
nutonic-tim-local = "nutonic_terramind_tim_local.cli:main"
nutonic-tim-geoguessr-materialize = "nutonic_terramind_tim_local.geoguessr_materialize:main"
nutonic-tim-space-serve = "nutonic_terramind_tim_local.run_space_serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_terramind_tim_local"]
