[project]
name = "terramind-ad"
version = "0.1.0"
description = "Unsupervised spatial change detection using TerraMind embeddings"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Edoardo Arnaudo" }]

dependencies = [
    "argdantic>=0.4.0",
    "geopandas>=1.0.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.17.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.8.0",
    "stackstac>=0.5.0",
    "xarray>=2024.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "dask[distributed]>=2024.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "geojson-pydantic>=2.1.0",
    "bokeh>=3.8.1",
    "torch>=2.0.0",
    "terratorch>=1.1",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "diffusers>=0.35.2",
    "zarr>=2.18.0",
    "numcodecs>=0.12.0",
    "scipy>=1.11.0",
    "streamlit>=1.51.0",
    "omnicloudmask>=1.6.0",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.17",
    "hf>=1.1.6",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terramind_ad"]

[tool.ruff]
line-length = 119
target-version = "py312"
