[project]
name = "terramind-geogen"
version = "0.0.1"
authors = [
  { name="Aaron Banze", email="aaron.banze@dlr.de" },
]
description = "Testing Terramind's Any-to-any generative capabilities"
readme = "README.md"
requires-python = "==3.11.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "terratorch==1.1.1",
    "huggingface_hub",
    "webdataset",
    "torch",
    "numpy==1.26.4",
    "albumentations",
    "diffusers==0.30.0",
    "fsspec",
    "braceexpand",
    "zarr==2.18.0",
    "numcodecs==0.15.1",
    "jupyter",
    "matplotlib",
    "pyrootutils",
    "cartopy",
    "tokenizers",
]

[project.urls]
Homepage = "https://github.com/a-banze/terramind-geogen"
Issues = "https://github.com/a-banze/terramind-geogen/issues"

[tool.setuptools]
include-package-data = true
packages = [
    "src",
]