[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nutonic-patagonia-eval"
version = "0.1.0"
description = "Virtual env for Patagonia TiM E2E eval (evaluate_vlm_patagonia*.py, upload_patagonia_eval_to_hf)"
requires-python = ">=3.11"
dependencies = [
    # Local TerraMind TiM runner + Sentinel-2 STAC stack ([s2]: pystac-client, rasterio, boto3).
    "nutonic-terramind-tim-local[s2]",
    # Eval scripts + STAC reference stills (`data/scripts/stac_reference_still.py`).
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    # Hub dataset uploads (`tools/upload_patagonia_eval_to_hf.py`).
    "huggingface_hub>=0.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nutonic_patagonia_eval"]

[tool.uv.sources]
nutonic-terramind-tim-local = { path = "../../inference/terramind_tim_local", editable = true }
